--- a/app/assets/stylesheets/generic.css.scss
+++ b/app/assets/stylesheets/generic.css.scss
@@ -133,6 +133,7 @@
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
+    color: #333;
 
     .fd-toolbar-left {
       li {
@@ -145,7 +146,6 @@
 
       a {
         font-size: 1.4rem;
-        color: #333;
         text-decoration: none;
 
         &:hover, &:focus {
@@ -161,7 +161,6 @@
       }
 
       a, input[type=submit] {
-        color: #333;
         opacity: 0.7;
         text-decoration: none;
         font-size: 1.4rem;
@@ -175,6 +174,7 @@
       }
 
       input[type=submit] {
+        color: #333;
         background-color: transparent;
         border: 0;
 
@@ -191,6 +191,10 @@
       li {
         display: inline-block;
       }
+    }
+
+    @media screen and (max-width: $mobile-width) {
+      padding: 0 15px;
     }
   }
 }
